# projeto-nvidia

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agents/: README.md  __init__.py  briefing.py  classifier.py  enricher.py  evidence_validator.py  extractor.py  fit_score.py  graph.py  rag.py  recommendation.py  relevance.py  scraper.py  search_planner.py  state.py
api/: README.md  __init__.py  main.py
artefatos/: classifier.md  evidence_validator.md  extractor.md  scraper.md  ux.md
core/: README.md  __init__.py  config.py  embeddings.py  llm.py  sectors.py
database/: README.md  __init__.py  repo.py  schema.sql
docs/superpowers/plans/: 2026-06-24-search-planner-agent.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  nav.ts
frontend/src/components/: Sidebar.tsx  Topbar.tsx
frontend/src/pages/: Analytics.tsx  FitScore.tsx  Pipeline.tsx  Placeholder.tsx  Qualificadas.tsx
rag/: README.md  __init__.py  chunk.py  index.py  ingest.py  rerank.py  retrieve.py
rag/corpus/: nvidia_docs.jsonl
recommender/: README.md  __init__.py  catalog.py
scraping/: README.md  __init__.py  anjos.py  base.py  fetch.py  latitud.py  openstartups.py  registry.py  search.py  wow.py
scripts/: run_pipeline.py
tests/: conftest.py  test_briefing.py  test_catalog.py  test_chunk.py  test_classifier.py  test_enricher.py  test_evidence_validator.py  test_extractor.py  test_fit_score.py  test_index.py  test_ingest.py  test_rag.py  test_recommendation.py  test_relevance.py  test_repo.py  test_rerank.py  test_retrieve.py  test_scraper.py  test_search.py  test_search_planner.py  test_sectors.py  test_smoke.py
tests/fixtures/: anjos_cases.html  ddg_results.html  latitud_portfolio.html  nvidia_nim.html  openstartups_ranking.html  startup_page.html  wow_portfolio.html
