# =====================================================================
# NVISION — Backend Python
# Gerenciado com `uv` (https://docs.astral.sh/uv/).
# Python fixado em 3.12 por compatibilidade com langgraph, playwright,
# qdrant-client e psycopg (3.14 ainda não tem wheels para várias delas).
#
#   uv python install 3.12
#   uv sync
#   uv run uvicorn api.main:app --reload
# =====================================================================
[project]
name = "nvision"
version = "0.1.0"
description = "NVIDIA Startup AI Radar — plataforma multi-agente de inteligência estratégica"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # --- API ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",        # inclui websockets para o live log
    # --- Orquestração de agentes (Entregável 2) ---
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    # Ambos os providers instalados; a escolha é via env var LLM_PROVIDER
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    # --- Config / utilidades ---
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "httpx>=0.27",
    # --- Scraping (Entregável 1) ---
    # Scrapling é o scraper principal: unifica fetch (HTTP/JS/anti-bot via
    # Fetcher/DynamicFetcher/StealthyFetcher) + parsing num framework só.
    # O extra [fetchers] traz os fetchers baseados em navegador (patchright).
    "scrapling[fetchers]>=0.4.9",
    # Stack canônica mantida para aprendizado da mecânica e fases futuras
    # (extração de texto de notícias/enriquecimento — ver artefatos/ux.md §7.3).
    "playwright>=1.48",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    # --- RAG / Bancos (Entregáveis 3) ---
    "qdrant-client>=1.12",
    "rank-bm25>=0.2.2",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
# Ferramentas de desenvolvimento: uv sync --group dev
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
